0.net-utils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: demo
spec:
  containers:
    - name: network-utils
      image: amouat/network-utils
      resources:
        limits:
          cpu: "200m"
          memory: 250Mi
      command: 
        - sleep
        - "60000"
