12.configmap.yaml
# Create a pod loading the files as environment variable
apiVersion: v1
kind: Pod
metadata:
  name: configmap-load
  namespace: demo
spec:
  containers:
  - name: demo
    image: alpine
    command: ["sleep", "3600"]
    resources:
      limits:
        cpu: 100m
        memory: 100Mi
    env: # Load values from ConfigMap directly as environment variable
    - name: APPLICATION_VERSION
      valueFrom:
        configMapKeyRef:
          name: demo-configmap # Name of the configmap in the same namespace
          key: application_version # Key for which value will be loaded
    - name: DEMO_PRESENTER_NAME
      valueFrom:
        configMapKeyRef:
          name: demo-configmap
          key: demo_presenter_name
    volumeMounts:
    - name: config
      mountPath: "/config"
      readOnly: true
  volumes: # Create configmaps as files 
  - name: config
    configMap:
      name: demo-configmap
      #array of keys from the configmap to create files
      items:
      - key: app.properties # Key of the value to be loaded as a file
        path: app.properties # relative path of the file
