13.secrets.yaml
# Pod to load secrets as environment variable and 
apiVersion: v1
kind: Pod
metadata:
  name: secret-loader
  namespace: demo
spec:
  containers:
  - name: demo
    image: alpine
    command: ["sleep", "3600"]
    resources:
      limits:
        cpu: 100m
        memory: 100Mi
    volumeMounts:
    - name: secrets
      mountPath: "/secrets"
      readOnly: true
  volumes:
  - name: secrets
    secret:
      secretName: demo-secret
      items:
      - key: USER_NAME
        path: "username"
      - key: PASSWORD
        path: "password"
