3.webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: demo
  labels:
    app: demo
    tier: frontend
spec:
  revisionHistoryLimit: 3
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge : 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
        - name: webapp
          image: pratapgowda/demo-webapp:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: workdir
              mountPath: /usr/share/webapp/html
          resources:
            limits:
              cpu: "500m"
              memory: 1G
            requests:
              cpu: "25m"
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
        - name: busybox
          image: busybox
          resources:
            limits:
              cpu: "500m"
              memory: 1G
            requests:
              cpu: "25m"
              memory: 100Mi
          command: 
            - sleep
            - "6000"
      # These containers are run during pod initialization
      dnsPolicy: Default
      volumes:
        - name: workdir
          emptyDir: {}
