10.google-svc-externalname.yaml
# External Name service to access wikipedia as "external-service.demo.svc.cluster.local"
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: demo
spec:
  type: ExternalName
  externalName: wikipedia.org
