8.webapp-svc-nodeport.yaml
# Nodeport service to expose 3.webapp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-nodeport
  namespace: demo
spec:
  type: NodePort
  selector:
    tier: frontend
  ports:
    - name: http
      protocol: TCP 
      port: 80 # exposed port for the cluster-ip service
      targetPort: 8080 # Container port of target pods
      nodePort: 32000 # optional field, if not provided k8s finds one within range of 30000-32767
